--- a/vignettes/a02_CodelistDiagnostics.Rmd
+++ b/vignettes/a02_CodelistDiagnostics.Rmd
@@ -7,13 +7,57 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
+
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>", message = FALSE, warning = FALSE,
+  fig.width = 7
 )
+
+library(CDMConnector)
+if (Sys.getenv("EUNOMIA_DATA_FOLDER") == "") Sys.setenv("EUNOMIA_DATA_FOLDER" = tempdir())
+if (!dir.exists(Sys.getenv("EUNOMIA_DATA_FOLDER"))) dir.create(Sys.getenv("EUNOMIA_DATA_FOLDER"))
+if (!eunomia_is_available()) downloadEunomiaData()
 ```
 
-```{r setup}
+## Introduction
+In this example we're going to summarise the characteristics of individuals with an ankle sprain, ankle fracture, forearm fracture, or a hip fracture using the Eunomia synthetic data. 
+
+We'll begin by creating our study cohorts.
+
+```{r}
+library(CDMConnector)
+library(CohortConstructor)
+library(CodelistGenerator)
 library(phenotypeR)
+library(dplyr)
+library(ggplot2)
+
+con <- DBI::dbConnect(duckdb::duckdb(),
+  dbdir = CDMConnector::eunomia_dir()
+)
+cdm <- CDMConnector::cdm_from_con(con,
+  cdm_schem = "main",
+  write_schema = "main",
+  cdm_name = "Eunomia"
+)
+
+cdm$injuries <- conceptCohort(cdm = cdm,
+  conceptSet = list(
+    "ankle_sprain" = 81151,
+    "ankle_fracture" = 4059173,
+    "forearm_fracture" = 4278672,
+    "hip_fracture" = 4230399
+  ),
+  name = "injuries")
+cdm$injuries |> 
+  glimpse()
+```
+
+## Summarising code use
+
+```{r}
+code_diag <- codelistDiagnostics(cohort = cdm$injuries)
+tableCohortCodeUse(code_diag)
 ```
