--- a/README.Rmd
+++ b/README.Rmd
@@ -39,7 +39,7 @@ You can install phenotypeR from GitHub:
 
 ```{r, eval = FALSE}
 # install.packages("remotes")
-remotes::install_github("oxford-pharmacoepi/phenotypeR")
+remotes::install_github("ohdsi/phenotypeR")
 ```
 
 ## Codelist diagnostics
