--- a/README.Rmd
+++ b/README.Rmd
@@ -27,11 +27,12 @@ knitr::opts_chunk$set(
 
 <!-- badges: end -->
 
-The phenotypeR package supports the assessment of cohorts 
+The phenotypeR package helps us to assess the research-readiness of a set of cohorts we have defined. This assessment includes:  
 
-Codelist-level diagnostics help to answer questions like what concepts from our codelist are used in the database? What concepts were present led to individuals' entry in the cohort? Are there any concepts being used in the database that we didn't include in our codelist but maybe we should have?
-
-Cohort-level diagnostics help to answer questions like how many individuals did we include in our cohort and how many were excluded because of our inclusion criteria? If we have multiple cohorts, is there overlap between them and when do people enter one cohort relative to another? What is the incidence of cohort entry and what is the prevalence of the cohort in the database? What are the characteristics of those people in the cohort, and how do they compare to people similar in terms of age and sex?
+- ___Database diagnostics___ which help us to better understand the database in which they have been created. This includes information about the size of the data, the time period covered, the number of people in the data as a whole. More granular information that may influence analytic decisions, such as the number of observation periods per person, is also described.  
+- ___Codelist diagnostics___ which help to answer questions like what concepts from our codelist are used in the database? What concepts were present led to individuals' entry in the cohort? Are there any concepts being used in the database that we didn't include in our codelist but maybe we should have?  
+- ___Cohort diagnostics___ which help to answer questions like how many individuals did we include in our cohort and how many were excluded because of our inclusion criteria? If we have multiple cohorts, is there overlap between them and when do people enter one cohort relative to another? What is the incidence of cohort entry and what is the prevalence of the cohort in the database?  
+- ___Matched diagnostics___ which compares our study cohorts to the overall population in the database. By matching people in the cohorts to people with a similar age and sex in the database we can see how our cohorts differ from the general database population.  
 
 ## Installation
 
@@ -44,7 +45,7 @@ remotes::install_github("ohdsi/phenotypeR")
 
 ## Codelist diagnostics
 
-```{r, message=FALSE}
+```{r, message=FALSE, warning=FALSE}
 library(omopgenerics)
 library(CDMConnector)
 library(phenotypeR)
@@ -62,7 +63,13 @@ cdm$gibleed <- conceptCohort(cdm = cdm,
 
 result <- cdm$gibleed |>
    phenotypeDiagnostics()
-result |> 
-  glimpse()
 ```
 
+```{r, message = TRUE}
+summary(result)
+```
+
+Once we have our results we can quickly view them in an interactive application. This shiny app will be saved in a new directory and can be further customised.
+```{r, eval=FALSE}
+shinyDiagnostics(result = result)
+```
