--- a/README.Rmd
+++ b/README.Rmd
@@ -16,18 +16,18 @@ knitr::opts_chunk$set(
 )
 ```
 
-# phenotypeR <img src="man/figures/logo.png" align="right" height="180"/>
+# PhenotypeR <img src="man/figures/logo.png" align="right" height="180"/>
 
 <!-- badges: start -->
 
 > **This package is under development and not yet ready for use.**
 
-[![R-CMD-check](https://github.com/ohdsi/phenotypeR/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/ohdsi/phenotypeR/actions/workflows/R-CMD-check.yaml)
+[![R-CMD-check](https://github.com/ohdsi/PhenotypeR/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/ohdsi/PhenotypeR/actions/workflows/R-CMD-check.yaml)
 [![Lifecycle:Experimental](https://img.shields.io/badge/Lifecycle-Experimental-339999)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 
 <!-- badges: end -->
 
-The phenotypeR package helps us to assess the research-readiness of a set of cohorts we have defined. This assessment includes:  
+The PhenotypeR package helps us to assess the research-readiness of a set of cohorts we have defined. This assessment includes:  
 
 - ___Database diagnostics___ which help us to better understand the database in which they have been created. This includes information about the size of the data, the time period covered, the number of people in the data as a whole. More granular information that may influence analytic decisions, such as the number of observation periods per person, is also described.  
 - ___Codelist diagnostics___ which help to answer questions like what concepts from our codelist are used in the database? What concepts were present led to individuals' entry in the cohort? Are there any concepts being used in the database that we didn't include in our codelist but maybe we should have?  
@@ -37,11 +37,11 @@ The phenotypeR package helps us to assess the research-readiness of a set of coh
 
 ## Installation
 
-You can install phenotypeR from GitHub:
+You can install PhenotypeR from GitHub:
 
 ```{r, eval = FALSE}
 # install.packages("remotes")
-remotes::install_github("ohdsi/phenotypeR")
+remotes::install_github("ohdsi/PhenotypeR")
 ```
 
 ## Example usage
@@ -49,7 +49,7 @@ remotes::install_github("ohdsi/phenotypeR")
 ```{r, message=FALSE, warning=FALSE}
 library(omopgenerics)
 library(CDMConnector)
-library(phenotypeR)
+library(PhenotypeR)
 library(CohortConstructor)
 library(dplyr)
 
